# insightface

./: pyproject.toml
recognition/partial_fc/mxnet/setup-utils/: requirements.txt
